--- a/blocks/form/form.scss
+++ b/blocks/form/form.scss
@@ -7,7 +7,7 @@ fieldset {
 }
 
 // Hide debug output
-main .form pre {
+.form pre {
   display: none;
 }
 
@@ -22,7 +22,7 @@ form:not(.edit-mode) [data-visible='false'] {
 }
 
 // Only show first form step initially
-main .form > div:not(:first-child) {
+.form > div:not(:first-child) {
   display: none;
 }
 
@@ -31,9 +31,19 @@ main .form > div:not(:first-child) {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: $spacing-500 $spacing-400;
-  max-height: 98px;
+  padding: $nav-padding-top $spacing-400 $nav-padding-bottom;
+  max-height: $nav-height;
   height: 100%;
+
+  @include media('tablet') {
+    max-height: $nav-height-tablet;
+    padding: $nav-padding-top-tablet $spacing-400 $nav-padding-bottom-tablet;
+  }
+
+  @include media('desktop') {
+    max-height: $nav-height-desktop;
+    padding: $nav-padding-top-desktop $spacing-400 $nav-padding-bottom-desktop;
+  }
 
   .image-wrapper picture {
     max-width: 150px;
@@ -45,27 +55,27 @@ main .form > div:not(:first-child) {
 }
 
 // Input overrides
-main .form input:disabled,
-main .form textarea:disabled,
-main .form select:disabled,
-main .form button:disabled {
+.form input:disabled,
+.form textarea:disabled,
+.form select:disabled,
+.form button:disabled {
   background-color: var(--form-input-disable-color);
 }
 
-main .form input[type='file'] {
+.form input[type='file'] {
   border: none;
   padding-inline-start: 0;
   background: unset;
   color: unset;
 }
 
-main .form textarea {
+.form textarea {
   min-height: 100px;
   font-family: $font-family;
   font-size: $size-font-body-default;
 }
 
-main .form label.required::after {
+.form label.required::after {
   content: '*';
   color: var(--form-label-color);
   padding-inline-start: 5px;
@@ -80,15 +90,15 @@ input::file-selector-button {
 }
 
 // Buttons
-main .form button {
+.form button {
   @extend %button--primary;
 }
 
-main form .file-wrapper > button {
+form .file-wrapper > button {
   display: flex;
 }
 
-main .submit-wrapper {
+.submit-wrapper {
   button {
     @extend %button--hollow;
     display: block;
@@ -97,11 +107,11 @@ main .submit-wrapper {
 }
 
 // File upload drag and drop area
-main .file-wrapper.decorated input[type='file'] {
+.file-wrapper.decorated input[type='file'] {
   display: none;
 }
 
-main .file-wrapper .field-dropregion {
+.file-wrapper .field-dropregion {
   background: rgb(0 0 0 / 2%);
   border: 1px dashed var(--form-input-border-color);
   border-radius: 4px;
@@ -111,68 +121,68 @@ main .file-wrapper .field-dropregion {
 }
 
 // Cards input (radio/checkbox)
-main .form form fieldset.cards > .radio-wrapper > input,
-main .form form fieldset.cards > .checkbox-wrapper > input {
+.form form fieldset.cards > .radio-wrapper > input,
+.form form fieldset.cards > .checkbox-wrapper > input {
   position: absolute;
   opacity: 0;
   width: 0;
   height: 0;
 }
 
-main .form .form-image-wrapper img {
+.form .form-image-wrapper img {
   max-width: 100%;
   height: auto;
 }
 
-main .form form fieldset.cards > .radio-wrapper > label > img,
-main .form form fieldset.cards > .checkbox-wrapper > label > img {
+.form form fieldset.cards > .radio-wrapper > label > img,
+.form form fieldset.cards > .checkbox-wrapper > label > img {
   max-width: 18px;
   max-height: 18px;
   object-fit: contain;
 }
 
-main .form form .field-label--with-description:not(.radio-group--with-icon__label){
-    flex-direction: column;
-    align-items: start;
+.form form .field-label--with-description:not(.radio-group--with-icon__label) {
+  flex-direction: column;
+  align-items: start;
 }
 
 // Repeatable field actions
-main .form form .repeat-actions {
+.form form .repeat-actions {
   grid-column: span 12;
   order: 2;
 }
 
-main .form form .item-remove,
-main .form form .item-add {
+.form form .item-remove,
+.form form .item-add {
   overflow: unset;
 }
 
-main .form form .item-remove {
+.form form .item-remove {
   justify-self: end;
   grid-column: span 12;
   order: 1;
 }
 
-main .form form div[data-variant='addRemoveButtons'] .item-add,
-main .form form div[data-variant='addRemoveButtons'] .item-remove {
+.form form div[data-variant='addRemoveButtons'] .item-add,
+.form form div[data-variant='addRemoveButtons'] .item-remove {
   display: block;
 }
 
 // File list display
-main .form .file-description {
+.form .file-description {
   display: flex;
   gap: 20px;
   align-items: center;
   margin-top: 5px;
 }
 
-main .form .file-description .file-description-name {
+.form .file-description .file-description-name {
   cursor: pointer;
   text-decoration: underline;
   flex: 1;
 }
 
-main .file-wrapper .file-description button {
+.file-wrapper .file-description button {
   --form-button-padding: 15px;
 
   width: 12px;
@@ -194,7 +204,7 @@ main .file-wrapper .file-description button {
   }
 }
 
-main .form .button-wrapper button[disabled] {
+.form .button-wrapper button[disabled] {
   cursor: auto;
 
   &:hover {
@@ -205,14 +215,14 @@ main .form .button-wrapper button[disabled] {
 }
 
 // Form layout: repeat wrapper
-main .form form .repeat-wrapper {
+.form form .repeat-wrapper {
   display: grid;
   grid-template-columns: repeat(var(--form-columns), minmax(0, 1fr));
   gap: var(--form-field-vert-gap) var(--form-field-horz-gap);
 }
 
 // Messages
-main .form .form-message.success-message {
+.form .form-message.success-message {
   color: #0f5132;
   background-color: #d1e7dd;
   border-color: #badbcc;
@@ -221,7 +231,7 @@ main .form .form-message.success-message {
   padding: 10px;
 }
 
-main .form .form-message.error-message {
+.form .form-message.error-message {
   color: #842029;
   background-color: #f8d7da;
   border-color: #f5c2c7;
@@ -231,7 +241,7 @@ main .form .form-message.error-message {
 }
 
 // Drag area in file wrapper
-main .form .file-wrapper .file-drag-area {
+.form .file-wrapper .file-drag-area {
   border: 1px dashed var(--border-color);
   border-radius: 5px;
   padding: 10px 5px;
@@ -243,13 +253,13 @@ main .form .file-wrapper .file-drag-area {
 }
 
 // Captcha
-main .form form:not(.edit-mode) .captcha-wrapper {
+.form form:not(.edit-mode) .captcha-wrapper {
   display: none;
 }
 
 // Inline group descriptions
-main .form form .radio-group-wrapper.horizontal .field-description,
-main .form form .checkbox-group-wrapper.horizontal .field-description {
+.form form .radio-group-wrapper.horizontal .field-description,
+.form form .checkbox-group-wrapper.horizontal .field-description {
   width: 100%;
   //order: 1;
   margin-top: 0.5rem;
@@ -261,7 +271,7 @@ main .form form .checkbox-group-wrapper.horizontal .field-description {
     --form-field-horz-gap: 10px;
   }
 
-  main .form form .wizard {
+  .form form .wizard {
     .wizard-menu-items {
       gap: 20px;
     }
