--- a/blocks/form/form.scss
+++ b/blocks/form/form.scss
@@ -31,15 +31,51 @@ main .form > div:not(:first-child) {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: $spacing-500 $spacing-400;
+  padding: 40px 48px 36px 48px;
   max-height: 98px;
   height: 100%;
+  border-bottom: 1px solid $color-shade-navy-40;
 
   .image-wrapper picture {
     max-width: 150px;
 
     @include media('desktop') {
       max-width: 300px;
+    }
+  }
+
+  .button-wrapper button {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    padding: var(--Spacing-Spacing-300, 12px) var(--Spacing-Spacing-000, 0px);
+    gap: var(--Spacing-Spacing-200, 8px);
+    font-family: "Atkinson Hyperlegible Next", sans-serif;
+    font-size: clamp(0.9375rem, 1.25vw, 1.0625rem);
+    font-style: normal;
+    font-weight: 500;
+    line-height: 133%;
+    letter-spacing: 0px;
+    color: #017ac9;
+    text-decoration: none;
+    background-image: none;
+    border: none;
+
+    &::after {
+      content: '';
+      display: inline-block;
+      width: 1rem;
+      height: 1rem;
+      background-image: url('/icons/icon-logout-exit-blue.svg');
+      background-repeat: no-repeat;
+      background-size: contain;
+      margin-left: 8px;
+    }
+
+    &:hover,
+    &:focus {
+      background-color: transparent;
+      color: #134276;
     }
   }
 }
@@ -88,12 +124,10 @@ main form .file-wrapper > button {
   display: flex;
 }
 
-main .submit-wrapper {
-  button {
-    @extend %button--hollow;
-    display: block;
-    margin-left: auto;
-  }
+main .submit-wrapper button {
+  @extend %button--hollow;
+  display: block;
+  margin-left: auto;
 }
 
 // File upload drag and drop area
@@ -131,9 +165,9 @@ main .form form fieldset.cards > .checkbox-wrapper > label > img {
   object-fit: contain;
 }
 
-main .form form .field-label--with-description:not(.radio-group--with-icon__label){
-    flex-direction: column;
-    align-items: start;
+main .form form .field-label--with-description:not(.radio-group--with-icon__label) {
+  flex-direction: column;
+  align-items: start;
 }
 
 // Repeatable field actions
@@ -174,7 +208,6 @@ main .form .file-description .file-description-name {
 
 main .file-wrapper .file-description button {
   --form-button-padding: 15px;
-
   width: 12px;
   height: 12px;
   border: none;
@@ -251,7 +284,6 @@ main .form form:not(.edit-mode) .captcha-wrapper {
 main .form form .radio-group-wrapper.horizontal .field-description,
 main .form form .checkbox-group-wrapper.horizontal .field-description {
   width: 100%;
-  //order: 1;
   margin-top: 0.5rem;
 }
 
