--- a/blocks/form/components/wizard/wizard.scss
+++ b/blocks/form/components/wizard/wizard.scss
@@ -28,8 +28,7 @@
 
 // Wizard container
 .wizard {
-  padding-top: $spacing-600;
-  padding-bottom: 120px; // more spacing at the bottom to be able to scroll through past the last content
+  padding: $spacing-600 32px 120px; // more spacing at the bottom to be able to scroll through past the last content
   min-height: $wizard-body-height;
   height: 100%;
   background: linear-gradient(
@@ -45,6 +44,15 @@
 
   @include media('desktop') {
     min-height: $wizard-body-height-desktop;
+  }
+
+  .current-wizard-step:not([data-index='1']) {
+    @include media('desktop') {
+      margin-left: auto;
+      margin-right: auto;
+      width: 100%;
+      max-width: 1038px;
+    }
   }
 
   .field-save-changes {
