--- a/styles/bootstrap/_utilities.scss
+++ b/styles/bootstrap/_utilities.scss
@@ -3,158 +3,158 @@
 
 // Display utilities
 .d-flex {
-  display: flex !important;
+  display: flex;
 }
 
 .d-inline-flex {
-  display: inline-flex !important;
+  display: inline-flex;
 }
 
 // Flex direction
 .flex-row {
-  flex-direction: row !important;
+  flex-direction: row;
 }
 
 .flex-column {
-  flex-direction: column !important;
+  flex-direction: column;
 }
 
 .flex-row-reverse {
-  flex-direction: row-reverse !important;
+  flex-direction: row-reverse;
 }
 
 .flex-column-reverse {
-  flex-direction: column-reverse !important;
+  flex-direction: column-reverse;
 }
 
 // Flex wrap
 .flex-wrap {
-  flex-wrap: wrap !important;
+  flex-wrap: wrap;
 }
 
 .flex-nowrap {
-  flex-wrap: nowrap !important;
+  flex-wrap: nowrap;
 }
 
 .flex-wrap-reverse {
-  flex-wrap: wrap-reverse !important;
+  flex-wrap: wrap-reverse;
 }
 
 // Justify content
 .justify-content-start {
-  justify-content: flex-start !important;
+  justify-content: flex-start;
 }
 
 .justify-content-end {
-  justify-content: flex-end !important;
+  justify-content: flex-end;
 }
 
 .justify-content-center {
-  justify-content: center !important;
+  justify-content: center;
 }
 
 .justify-content-between {
-  justify-content: space-between !important;
+  justify-content: space-between;
 }
 
 .justify-content-around {
-  justify-content: space-around !important;
+  justify-content: space-around;
 }
 
 .justify-content-evenly {
-  justify-content: space-evenly !important;
+  justify-content: space-evenly;
 }
 
 // Align items
 .align-items-start {
-  align-items: flex-start !important;
+  align-items: flex-start;
 }
 
 .align-items-end {
-  align-items: flex-end !important;
+  align-items: flex-end;
 }
 
 .align-items-center {
-  align-items: center !important;
+  align-items: center;
 }
 
 .align-items-baseline {
-  align-items: baseline !important;
+  align-items: baseline;
 }
 
 .align-items-stretch {
-  align-items: stretch !important;
+  align-items: stretch;
 }
 
 // Align self
 .align-self-start {
-  align-self: flex-start !important;
+  align-self: flex-start;
 }
 
 .align-self-end {
-  align-self: flex-end !important;
+  align-self: flex-end;
 }
 
 .align-self-center {
-  align-self: center !important;
+  align-self: center;
 }
 
 .align-self-baseline {
-  align-self: baseline !important;
+  align-self: baseline;
 }
 
 .align-self-stretch {
-  align-self: stretch !important;
+  align-self: stretch;
 }
 
 // Flex grow and shrink
 .flex-grow-0 {
-  flex-grow: 0 !important;
+  flex-grow: 0;
 }
 
 .flex-grow-1 {
-  flex-grow: 1 !important;
+  flex-grow: 1;
 }
 
 .flex-shrink-0 {
-  flex-shrink: 0 !important;
+  flex-shrink: 0;
 }
 
 .flex-shrink-1 {
-  flex-shrink: 1 !important;
+  flex-shrink: 1;
 }
 
 // Order
 .order-first {
-  order: -1 !important;
+  order: -1;
 }
 
 .order-last {
-  order: 6 !important;
+  order: 6;
 }
 
 .order-0 {
-  order: 0 !important;
+  order: 0;
 }
 
 .order-1 {
-  order: 1 !important;
+  order: 1;
 }
 
 .order-2 {
-  order: 2 !important;
+  order: 2;
 }
 
 .order-3 {
-  order: 3 !important;
+  order: 3;
 }
 
 .order-4 {
-  order: 4 !important;
+  order: 4;
 }
 
 .order-5 {
-  order: 5 !important;
+  order: 5;
 }
 
 // Responsive variants
@@ -163,122 +163,122 @@
     $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
 
     .d#{$infix}-flex {
-      display: flex !important;
+      display: flex;
     }
     .d#{$infix}-inline-flex {
-      display: inline-flex !important;
+      display: inline-flex;
     }
 
     .flex#{$infix}-row {
-      flex-direction: row !important;
+      flex-direction: row;
     }
     .flex#{$infix}-column {
-      flex-direction: column !important;
+      flex-direction: column;
     }
     .flex#{$infix}-row-reverse {
-      flex-direction: row-reverse !important;
+      flex-direction: row-reverse;
     }
     .flex#{$infix}-column-reverse {
-      flex-direction: column-reverse !important;
+      flex-direction: column-reverse;
     }
 
     .flex#{$infix}-wrap {
-      flex-wrap: wrap !important;
+      flex-wrap: wrap;
     }
     .flex#{$infix}-nowrap {
-      flex-wrap: nowrap !important;
+      flex-wrap: nowrap;
     }
     .flex#{$infix}-wrap-reverse {
-      flex-wrap: wrap-reverse !important;
+      flex-wrap: wrap-reverse;
     }
 
     .justify-content#{$infix}-start {
-      justify-content: flex-start !important;
+      justify-content: flex-start;
     }
     .justify-content#{$infix}-end {
-      justify-content: flex-end !important;
+      justify-content: flex-end;
     }
     .justify-content#{$infix}-center {
-      justify-content: center !important;
+      justify-content: center;
     }
     .justify-content#{$infix}-between {
-      justify-content: space-between !important;
+      justify-content: space-between;
     }
     .justify-content#{$infix}-around {
-      justify-content: space-around !important;
+      justify-content: space-around;
     }
     .justify-content#{$infix}-evenly {
-      justify-content: space-evenly !important;
+      justify-content: space-evenly;
     }
 
     .align-items#{$infix}-start {
-      align-items: flex-start !important;
+      align-items: flex-start;
     }
     .align-items#{$infix}-end {
-      align-items: flex-end !important;
+      align-items: flex-end;
     }
     .align-items#{$infix}-center {
-      align-items: center !important;
+      align-items: center;
     }
     .align-items#{$infix}-baseline {
-      align-items: baseline !important;
+      align-items: baseline;
     }
     .align-items#{$infix}-stretch {
-      align-items: stretch !important;
+      align-items: stretch;
     }
 
     .align-self#{$infix}-start {
-      align-self: flex-start !important;
+      align-self: flex-start;
     }
     .align-self#{$infix}-end {
-      align-self: flex-end !important;
+      align-self: flex-end;
     }
     .align-self#{$infix}-center {
-      align-self: center !important;
+      align-self: center;
     }
     .align-self#{$infix}-baseline {
-      align-self: baseline !important;
+      align-self: baseline;
     }
     .align-self#{$infix}-stretch {
-      align-self: stretch !important;
+      align-self: stretch;
     }
 
     .flex-grow#{$infix}-0 {
-      flex-grow: 0 !important;
+      flex-grow: 0;
     }
     .flex-grow#{$infix}-1 {
-      flex-grow: 1 !important;
+      flex-grow: 1;
     }
     .flex-shrink#{$infix}-0 {
-      flex-shrink: 0 !important;
+      flex-shrink: 0;
     }
     .flex-shrink#{$infix}-1 {
-      flex-shrink: 1 !important;
+      flex-shrink: 1;
     }
 
     .order#{$infix}-first {
-      order: -1 !important;
+      order: -1;
     }
     .order#{$infix}-last {
-      order: 6 !important;
+      order: 6;
     }
     .order#{$infix}-0 {
-      order: 0 !important;
+      order: 0;
     }
     .order#{$infix}-1 {
-      order: 1 !important;
+      order: 1;
     }
     .order#{$infix}-2 {
-      order: 2 !important;
+      order: 2;
     }
     .order#{$infix}-3 {
-      order: 3 !important;
+      order: 3;
     }
     .order#{$infix}-4 {
-      order: 4 !important;
+      order: 4;
     }
     .order#{$infix}-5 {
-      order: 5 !important;
+      order: 5;
     }
   }
 }
