--- a/styles/bootstrap/mixins/_visually-hidden.scss
+++ b/styles/bootstrap/mixins/_visually-hidden.scss
@@ -6,23 +6,23 @@
 // See: https://kittygiraudel.com/2016/10/13/css-hide-and-seek/
 
 @mixin visually-hidden() {
-  width: 1px !important;
-  height: 1px !important;
-  padding: 0 !important;
-  margin: -1px !important; // Fix for https://github.com/twbs/bootstrap/issues/25686
-  overflow: hidden !important;
-  clip: rect(0, 0, 0, 0) !important;
-  white-space: nowrap !important;
-  border: 0 !important;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px; // Fix for https://github.com/twbs/bootstrap/issues/25686
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
 
   // Fix for positioned table caption that could become anonymous cells
   &:not(caption) {
-    position: absolute !important;
+    position: absolute;
   }
 
   // Fix to prevent overflowing children to become focusable
   * {
-    overflow: hidden !important;
+    overflow: hidden;
   }
 }
 
