--- a/blocks/form/components/formcontextualhelp/formcontextualhelp.scss
+++ b/blocks/form/components/formcontextualhelp/formcontextualhelp.scss
@@ -8,7 +8,7 @@
   padding: $spacing-400 $spacing-300;
   background: $bg-primary;
   display: block;
-  border-radius: $spacing-200;
+  border-radius: $border-radius-low;
   border: 1px solid $color-shade-navy-40;
   margin-bottom: $spacing-600;
 
