chore: removed extreme specificity

--- a/blocks/form/components/education/education.scss
+++ b/blocks/form/components/education/education.scss
@@ -1,6 +1,6 @@
 @use '../../../../styles/settings' as *;
 
-main .form form .panel-repeatable-panel__education {
+.form form .panel-repeatable-panel__education {
   .repeatable-entry {
     &__course {
       @include font-body-large;
