--- a/blocks/form/components/workexperience/workexperience.scss
+++ b/blocks/form/components/workexperience/workexperience.scss
@@ -1,6 +1,6 @@
 @use '../../../../styles/settings' as *;
 
-main .form form .panel-repeatable-panel__workexperience {
+.form form .panel-repeatable-panel__workexperience {
   .repeatable-entry {
     &__title {
       @include font-body-large;
